[package]
name = "payload-pulverizer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"
pulldown-cmark = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] } 
rand = "0.9.1"
